- FIX: Player error when using normalization and equalizer with MPlayer [ 3419533 ] [ patch by Laurent Cathala ]
- FIX: Device options in play list not enabled when device connected
- FIX: Hotkeys reset after application restart [ 3421011 ]
- FIX: Last.fm cache initialized several times
- FIX: Context panel update called twice
- FIX: Not enough space for remaining time in progress slider


aTunes 2.1.0
------------
- New lyric engine: LyrDB (www.lyrdb.com)
- Use close buttons for playlists tabs when using Substance
- Allow creating patterns for tag edition by double-clicking on available patterns
- UI: Removed line border from titled borders
- Use absolute folder name when setting tags from patterns
- Restore selection after track deletion in playlist [3007538] [ patch by cy6ergnOm ]
- Song properties dialog improved [3002167] (patch by cy6ergnOm)
- Preferences reworked and saved immediately [ feature request 2977778 ]
- Visual improvements
- Removed multiple view
- Option to show/hide advanced player controls (karaoke, normalization)
- Moved navigation views buttons to tool bar instead of tabbed pane
- Removed play list controls panel
- Removed play list tabs, used combo box
- Removed AudioObjectPropertiesPanel
- Removed toolbar
- Player controls panel redesigned
- Plugins disabled by default (use "enable-plugins" argument to enable)
- Removed icons
- Improved Full Screen Mode
- Removed karaoke mode
- Fetch covers while reading repository and show in progress dialog
- User can change color of tray player icons
- Repository saved immediately after a change
- Play lists saved immediately after a change
- Option to refresh only one folder from folders view
- Edit radio name, url and label
- Include file name and path in filter [3146992]
- Improvements in columns sort [ patch by deathgorepain ]
- Drag-N-Drop Improvement [ patch by deathgorepain ]
- Customizations in look and feel for each OS (Mac OS X)